--- a/wechat/miniprogram/pages/user/index.wxml
+++ b/wechat/miniprogram/pages/user/index.wxml
@@ -1,10 +1,10 @@
 <t-cell
-  title="{{nickname}}"
-  description="{{slogan}}"
-  image="{{avatar}}"
+  title="{{config.nickname}}"
+  description="{{config.slogan}}"
+  image="{{config.avatar}}"
   url="/pages/user/edit"
   hover
   arrow
 />
 
-<view class="slogan">{{slogan}}</view>
+<view class="slogan">{{config.slogan}}</view>
