--- a/wechat/miniprogram/pages/user/detail/index.wxml
+++ b/wechat/miniprogram/pages/user/detail/index.wxml
@@ -1,12 +1,12 @@
 <view class="page">
-  <view class="avatar">
+  <view class="avatar" bind:tap="editAvatar">
     <t-avatar image="{{config.avatar}}" size="large" shape="round"></t-avatar>
   </view>
 
   <view class="t-cell-group-margin">
     <t-cell-group theme="card">
-      <t-cell title="昵称" note="{{config.nickname}}" hover arrow></t-cell>
-      <t-cell title="Slogan" note="{{config.slogan}}" hover arrow></t-cell>
+      <t-cell title="昵称" note="{{config.nickname}}" url="/pages/user/edit/nickname" hover arrow></t-cell>
+      <t-cell title="Slogan" note="{{config.slogan}}" url="/pages/user/edit/slogan" hover arrow></t-cell>
     </t-cell-group>
   </view>
 
