refactor: 优化页面交互体验 (#79)
- optimize(frontend): 优化用户查看与编辑交互体验
- optimize(frontend): 去掉 totp 页面非必要代码
- feat(backend): 增加用户相关编辑 API
- fix(backend): 修复新用户 token 未与 user 表正确关联的问题
- delete(backend): 去掉通用用户编辑 API

--- a/wechat/miniprogram/pages/user/detail/index.wxml
+++ b/wechat/miniprogram/pages/user/detail/index.wxml
@@ -1,6 +1,23 @@
-<t-message id="t-message" />
-<t-toast id="t-toast" />
+<view class="page">
+  <view class="avatar" bind:tap="editAvatar">
+    <t-avatar image="{{config.avatar}}" size="large" shape="round"></t-avatar>
+  </view>
 
+  <view class="t-cell-group-margin">
+    <t-cell-group theme="card">
+      <t-cell title="昵称" note="{{config.nickname}}" url="/pages/user/edit/nickname" hover arrow></t-cell>
+      <t-cell title="Slogan" note="{{config.slogan}}" url="/pages/user/edit/slogan" hover arrow></t-cell>
+    </t-cell-group>
+  </view>
+
+  <view class="t-cell-group-margin">
+    <t-cell-group theme="card">
+      <t-cell title="手机号" note="敬请期待" hover></t-cell>
+    </t-cell-group>
+  </view>
+</view>
+
+<!-- 
 <form bindsubmit="submit">
   <view class="avatar">
     <t-button open-type="chooseAvatar" bindchooseavatar="onChooseAvatar" shape="square" size="large">
@@ -19,4 +36,4 @@
     <t-button theme="primary" size="large" type="submit" block>修改</t-button>
     <t-button size="large" bind:tap="cancel" block>取消</t-button>
   </view>
-</form>
+</form> -->
