--- a/wechat/miniprogram/pages/user/edit/slogan.scss
+++ b/wechat/miniprogram/pages/user/edit/slogan.scss
@@ -1,11 +1,6 @@
-.avatar {
-  --td-button-large-height: 64px;
-  margin-top: 50px;
-  text-align: center;
-}
-
 .input {
   margin: 50px 0;
+  padding: 0 10px;
 }
 
 .operation {
