--- a/wechat/miniprogram/pages/totp/edit/issuer.wxml
+++ b/wechat/miniprogram/pages/totp/edit/issuer.wxml
@@ -4,7 +4,7 @@
 <view class="page">
   <form bindsubmit="submit">
     <view>
-      <t-input type="text" name="slogan" placeholder="请填写 Slogan" value="{{slogan}}" maxlength="50" align="left"/>
+      <t-input name="issuer" placeholder="请填写提供商" value="{{issuer}}" maxlength="10" align="left"/>
     </view>
 
     <view class="operation">
