--- a/wechat/miniprogram/app.scss
+++ b/wechat/miniprogram/app.scss
@@ -5,10 +5,17 @@ page {
 
 .page {
   background-color: #f3f3f3;
-  padding: 15px 0;
   height: 100%;
 }
 
 .t-cell-group-margin {
   margin-bottom: 20px;
+}
+
+.operation {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 15px;
+  padding: 0 10px;
 }
