--- a/wechat/miniprogram/pages/totp/index.scss
+++ b/wechat/miniprogram/pages/totp/index.scss
@@ -1,8 +1,3 @@
-.page {
-  padding: 0;
-  height: auto;
-}
-
 .items {
   padding-bottom: 100px;
 
@@ -59,7 +54,7 @@
         color: white;
       }
       
-      .btn-edit {
+      .btn-detail {
         background-color: #ed7b2f;
       }
       
