--- a/wechat/miniprogram/pages/totp/index.scss
+++ b/wechat/miniprogram/pages/totp/index.scss
@@ -1,14 +1,8 @@
-.page {
-  padding: 0;
-  height: auto;
-}
-
 .items {
   padding-bottom: 100px;
 
   .item {
     height: 100px;
-    padding: 0 10px;
     background-color: white;
 
     .item-body {
@@ -17,6 +11,7 @@
       flex-flow: row nowrap;
       align-items: center;
       justify-content: center;
+      padding: 0 10px;
 
       .item-body-info {
         flex: 2;
@@ -59,7 +54,7 @@
         color: white;
       }
       
-      .btn-edit {
+      .btn-detail {
         background-color: #ed7b2f;
       }
       
