--- a/wechat/miniprogram/pages/totp/index.wxml
+++ b/wechat/miniprogram/pages/totp/index.wxml
@@ -15,26 +15,7 @@
   <t-empty wx:if="{{items.length <= 0}}" icon="info-circle-filled" description="暂无数据" />
 
   <view class="items" wx:if="{{items.length > 0}}">
-    <view class="item" wx:for="{{items}}" wx:key="id" wx:for-index="index" wx:for-item="item" >
-      <t-swipe-cell>
-        <view class="item-body">
-          <view class="item-body-info">
-            <view class="item-body-info-issuer">{{ item.issuer }}</view>
-            <view class="item-body-info-username">{{ item.username }}</view>
-          </view>
-          <view class="item-body-code">{{ item.code }}</view>
-        </view>
-        <view slot="right" class="item-btn">
-          <view class="btn btn-detail" data-id="{{ item.id }}" bind:tap="detail">
-            详情
-          </view>
-          <view class="btn btn-delete" data-id="{{ item.id }}" bind:tap="delete">
-            删除
-          </view>
-        </view>
-      </t-swipe-cell>
-      <progress class="item-progress" percent="{{ item.remainSeconds / item.config.period * 100 }}" stroke-width="2" ></progress>
-    </view>
+    <app-totp-item wx:for="{{ items }}" wx:key="id" wx:for-index="index" wx:for-item="item" item="{{ item }}" bind:refreshCodeFailed="refreshCodeFailed" />
   </view>
 
   <t-fab icon="add" bind:click="create" aria-label="增加" text="增加"></t-fab>
