optimize: 优化代码,抽离 totp 组件

--- a/wechat/miniprogram/components/totp/item.wxml
+++ b/wechat/miniprogram/components/totp/item.wxml
@@ -2,19 +2,19 @@
   <t-swipe-cell>
     <view class="item-body">
       <view class="item-body-info">
-        <view class="item-body-info-issuer">{{ item.issuer }}</view>
-        <view class="item-body-info-username">{{ item.username }}</view>
+        <view class="item-body-info-issuer">{{ issuer }}</view>
+        <view class="item-body-info-username">{{ username }}</view>
       </view>
-      <view class="item-body-code">{{ item.code }}</view>
+      <view class="item-body-code">{{ code }}</view>
     </view>
     <view slot="right" class="item-btn">
-      <view class="btn btn-detail" data-id="{{ item.id }}" bind:tap="detail">
+      <view class="btn btn-detail" bind:tap="detail">
         详情
       </view>
-      <view class="btn btn-delete" data-id="{{ item.id }}" bind:tap="delete">
+      <view class="btn btn-delete" bind:tap="delete">
         删除
       </view>
     </view>
   </t-swipe-cell>
-  <progress class="item-progress" percent="{{ remainSeconds / item.config.period * 100 }}" stroke-width="2" ></progress>
+  <progress class="item-progress" percent="{{ remainSeconds / period * 100 }}" stroke-width="2" ></progress>
 </view>
