--- a/wechat/miniprogram/pages/totp/index.wxml
+++ b/wechat/miniprogram/pages/totp/index.wxml
@@ -8,14 +8,26 @@
   cancel-btn="取消"
   bind:confirm="dialogConfirm"
   bind:cancel="dialogCancel"
-  data-id="{{dialogDataId}}"
 />
 
 <view class="page">
   <t-empty wx:if="{{items.length <= 0}}" icon="info-circle-filled" description="暂无数据" />
 
   <view class="items" wx:if="{{items.length > 0}}">
-    <app-totp-item wx:for="{{ items }}" wx:key="id" wx:for-index="index" wx:for-item="item" item="{{ item }}" bind:refreshCodeFailed="refreshCodeFailed" />
+    <app-totp-item
+      wx:for="{{ items }}"
+      wx:key="unique"
+      wx:for-index="index"
+      wx:for-item="item"
+      itemId="{{ item.id }}"
+      period="{{ item.config.period }}"
+      issuer="{{ item.issuer }}"
+      username="{{ item.username }}"
+      code="{{ item.code }}"
+      bind:message="itemMessage"
+      bind:detail="itemDetail"
+      bind:delete="itemDelete" 
+    />
   </view>
 
   <t-fab icon="add" bind:click="create" aria-label="增加" text="增加"></t-fab>
